--- a/src/site/markdown/update-manual.md.vm
+++ b/src/site/markdown/update-manual.md.vm
@@ -1,24 +1,6 @@
 Manualles Update auf DWH-J2EE-${dwhJ2EEVersion} für Debian, CentOS
 ====================================================
 
-  - [Anmelden als ROOT](#anmelden-als-root)
-  - [Setzen der Umgebungsvariablen zur Vereinfachung des Updates und eventuell Laden des Updatepakets](#setzen-der-umgebungsvariablen-zur-vereinfachung-des-updates-und-eventuell-laden-des-updatepakets)
-  - [Java Version Check und Fix](#java-version-check-und-fix)
-  - [Löschen der alten Software](#l-schen-der-alten-software)
-  - [Anpassen der Konfigurationsdatei `aktin.properties`](#anpassen-der-konfigurationsdatei--aktinproperties-)
-  - [Änderungen an der Konfigurationsdatei `aktin.properties` (nicht relevant für Ersteinrichtung)](#-nderungen-an-der-konfigurationsdatei--aktinproperties---nicht-relevant-f-r-ersteinrichtung-)
-  - [E-Mail-Konfiguration](#e-mail-konfiguration)
-  - [Einspielen der neuen Ontologie-Metadaten](#einspielen-der-neuen-ontologie-metadaten)
-  - [Anpassung der Datumsangaben](#anpassung-der-datumsangaben)
-  - [Entfernen der Defaulteinträge im Webformular](#entfernen-der-defaulteintr-ge-im-webformular)
-  - [Anlegen der AKTIN-Datenbanken und der AKTIN-Datasource in Wildfly](#anlegen-der-aktin-datenbanken-und-der-aktin-datasource-in-wildfly)
-  - [Änderung der Logging-Einstellungen](#-nderung-der-logging-einstellungen)
-  - [Anlegen benötiger Ordnerstruktur](#anlegen-ben-tiger-ordnerstruktur)
-  - [Erhöhung der JAVA-VM Arbeitsspeicher für die Wildfly-Service](#erh-hung-der-java-vm-arbeitsspeicher-f-r-die-wildfly-service)
-  - [Neustart des Wildfly-Services und Löschen der alten Softwarepakete](#neustart-des-wildfly-services-und-l-schen-der-alten-softwarepakete)
-  - [Deployment des neuen Softwarepaketes](#deployment-des-neuen-softwarepaketes)
-  - [Aktin Diagnose-Skript](#aktin-diagnose-skript)
-
 Anmelden als ROOT
 -----------------
 
@@ -39,7 +21,7 @@ Alle folgende Befehle sollten als `root` User ausgeführt werden.
 Setzen der Umgebungsvariablen zur Vereinfachung des Updates und eventuell Laden des Updatepakets
 -------------------------------------------------------------------------
 
-Diese Varialben werden nur für dieses Updatesession gesetzt.
+Diese Variablen werden nur für dieses Updatesession gesetzt.
 
 Die Variable `WILDFLY_HOME` wird auf den Homedirectory von dem Wildfly Service gesetzt, in Normalfall unter `/opt/wildfly-9.0.2.Final/`.
 Die Variable `i2b2_WEBDIR` linkt auf den Ordner des i2b2-Webclients. Diese befindet sich im Apache-Webordner, je nach Distribution `/var/www/` oder `/var/www/html/`. In dem ursprünglichen Installationsschritt wurde zur Vereinfachung die Verlinkung `/var/webroot/` erstellt. 
@@ -379,6 +361,6 @@ Sollten weitere Probleme entstehen, kontaktieren Sie uns bitte unter it-support(
 
 # Aktin Diagnose-Skript
 
-Sollten Probleme beim mauellen Update auftreten, so führen sie bitte das Aktin-Diagnose-Skript aus. Eine genauere Beschreibung finden sie auf der Seite [Installationsskript](install-script.html) im bereich "Aktin Diagnose-Skript".
+Sollten Probleme beim mauellen Update auftreten, so führen Sie bitte das Aktin-Diagnose-Skript aus. Eine genauere Beschreibung finden Sie auf der Seite [Installationsskript](install-script.html) im Bereich "Aktin Diagnose-Skript".
 
-Senden sie diese Datei bitte an den Aktin-Support, unter it-support(at)aktin.org, mit einer Support-Anfrage. Die erzeugten Logs helfen bei der Identifizierung von Problemen.
+Senden Sie diese Datei bitte an den Aktin-Support, unter it-support(at)aktin.org, mit einer Support-Anfrage. Die erzeugten Logs helfen bei der Identifizierung von Problemen.
