changed download description for auto update

--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -17,8 +17,19 @@ su -
 
 Als erstes muss das Paket heruntergeladen und entpackt werden: 
 
+_Softwareupdate-Paket auf DWH-J2EE-${dwhJ2EEVersion}_
+
+[${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
+
+Kopieren laden oder kopieren Sie diese Datei in Root-Verzeichnis Ihres Servers:
+
 ```
-wget ${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz
+/
+```
+Entpacken Sie die Datei und wechseln an schließend in das Verzeichnis des Updates:
+
+```
+
 tar xvzf dwh-update-${project.version}.tar.gz
 cd dwh-update
 ```
